Ticket #28319: Added TableConfigurationProvider adding a column group.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -134,6 +134,7 @@ class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Downl
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Export starten.
 class.com.top_logic.layout.table.model.I18NConstants.DOWNLOAD_FILE_KEY = Tabellendaten
 class.com.top_logic.layout.table.model.I18NConstants.DOWNLOAD_FILE_KEY.help = <i>Ressourcenschlüssel</i> für den Standardnamen der Download-Datei.
+class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = Es gibt keine Spalte mit dem Namen {0}.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME = Die Eigenschaft {1} ist nicht auf {0} definiert.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = Die Eigenschaft {1} ist auf {0} nicht definiert. Verfügbare Eigenschaften sind: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Das Öffnen des Fensters schlug fehl.
@@ -5828,6 +5829,12 @@ com.top_logic.layout.table.model.ColumnCustomization.ORDER.tooltip = Die Reihenf
 com.top_logic.layout.table.model.ColumnCustomization.SELECTION = Auswahl
 com.top_logic.layout.table.model.ColumnCustomization.SELECTION.tooltip = Spalten können ausgewählt und abgewählt werden. Dies schließt den <i>Anpassungsauftrag</i> ein.
 com.top_logic.layout.table.model.ColumnCustomization.tooltip = Wie Tabellenspalten durch den Benutzer angepasst werden können.
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider = Spaltengruppe
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.context = Kontext
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.context.tooltip = Der Kontext, in dem diese Berechnung konfiguriert ist. <p> Wird zum Nachschlagen von Spalten verwendet, die in diesem Kontext deklariert sind. </p>
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.inner-columns = Innere Spalten
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.inner-columns.tooltip = Die Spalten, die in der Spaltengruppe angezeigt werden.
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.tooltip = <i>Tabellenkonfigurations-Plugin</i>, um eine Spaltengruppe zu erstellen.
 com.top_logic.layout.table.model.DynamicColumns = Dynamische Spalten
 com.top_logic.layout.table.model.DynamicColumns.Config.column-default = Standard-Spalte
 com.top_logic.layout.table.model.DynamicColumns.Config.column-default.tooltip = Konfiguration zur Anwendung auf alle dynamisch hinzugefügten Spalten.
