--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -134,6 +134,7 @@ class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Prepa
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Starting export.
 class.com.top_logic.layout.table.model.I18NConstants.DOWNLOAD_FILE_KEY = Table data
 class.com.top_logic.layout.table.model.I18NConstants.DOWNLOAD_FILE_KEY.help = <i>Resource key</i> for the default name of the download file.
+class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = There is no column with name {0}.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME = The property {1} is not defined on {0}.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = The property {1} is not defined on {0}. Available properties are: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Opening the window failed.
@@ -5828,6 +5829,12 @@ com.top_logic.layout.table.model.ColumnCustomization.ORDER.tooltip = The order o
 com.top_logic.layout.table.model.ColumnCustomization.SELECTION = Selection
 com.top_logic.layout.table.model.ColumnCustomization.SELECTION.tooltip = Columns can be selected and unselected. This includes the customization <i>order</i>.
 com.top_logic.layout.table.model.ColumnCustomization.tooltip = How table columns can be customized by the user.
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider = Column group
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.context = Context
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.context.tooltip = The context in which this provider is configured. <p> Used for looking up columns that are declared in this context. </p>
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.inner-columns = Inner columns
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.Config.inner-columns.tooltip = The columns that are displayed in the column group.
+com.top_logic.layout.table.model.ColumnGroupTableConfigurationProvider.tooltip = <i>Table configuration plug-in</i> to create a column group.
 com.top_logic.layout.table.model.DynamicColumns = Dynamic columns
 com.top_logic.layout.table.model.DynamicColumns.Config.column-default = Column default
 com.top_logic.layout.table.model.DynamicColumns.Config.column-default.tooltip = Configuration to apply to all dynamically added columns.
