Ticket #28319: Added possibility to sort all dynamic columns within a column group.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -860,6 +860,8 @@ com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.co
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.columnVisibility.tooltip = Die Sichtbarkeit der erstellten Spalten.
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.columns = Spalten
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.columns.tooltip = Funktion zur Berechnung von Spalten. <p> Eine Spalte ist ein beliebiges Objekt, das die Spalte identifiziert. Dieses Spaltenobjekt wird an die anderen Funktionen zur Berechnung der Beschriftung sowie zur Speicherung und zum Abruf der Werte weitergegeben. </p> <p> Die Funktion <i>Spalten</i> erwartet das Modell der Komponente als einziges Argument. Als Ergebnis wird eine beliebige Liste von Objekten erwartet, die als Repräsentanten für die erzeugten Tabellenspalten dienen. </p> <pre> <code>model -> [...]</code> </pre>
+com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.group-label = Bezeichnung der Gruppe
+com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.group-label.tooltip = Bezeichnung der Gruppenspalte. <p> Wenn eine Gruppenbezeichnung festgelegt ist, werden alle dynamischen Spalten in eine Gruppe mit diesem Namen sortiert. </p>
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.idPrefix = ID-Präfix
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.idPrefix.tooltip = Gemeinsames technisches Präfix, das an jeden technischen Spaltennamen aller von diesem Anbieter erstellten Spalten angehängt wird.
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.updater = Speicheroperation
