--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -860,6 +860,8 @@ com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.co
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.columnVisibility.tooltip = The visibility of the created columns.
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.columns = Columns
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.columns.tooltip = Function computing columns. <p> A column is an arbitrary object that identifies the column. This column object is passed to the other functions for label computation, and value storage and retrieval. </p> <p> The columns function expects the component's model as single argument. Expected as result is an arbitrary list of objects that serve as representatives for the generated table columns. </p> <pre> <code>model -> [...]</code> </pre>
+com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.group-label = Group label
+com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.group-label.tooltip = Label of the group column. <p> When a group label is set, all dynamic columns are sorted into a group with this name. </p>
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.idPrefix = ID prefix
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.idPrefix.tooltip = Common technical prefix that is added to each technical column name of all columns created by this provider.
 com.top_logic.model.search.providers.DynamicColumnProviderByExpression.Config.updater = Updater
