--- a/com.top_logic.kafka/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.kafka/src/main/java/META-INF/messages_de.properties
@@ -81,6 +81,7 @@ com.top_logic.kafka.serialization.StringSerializer = String-Serialisierer
 com.top_logic.kafka.serialization.StringSerializer.Config.encoding = Kodierung
 com.top_logic.kafka.serialization.StringSerializer.Config.encoding.tooltip = Die Kodierung für Zeicheninhalte. <p> Der Wert ist irrelevant, wenn binäre Daten übertragen werden. </p>
 com.top_logic.kafka.serialization.StringSerializer.tooltip = Ein <i>Serialisierer</i>, der Nachrichten erstellt, indem er Werte als <i>Zeichenketten</i> interpretiert und sie mit einem bestimmten Zeichensatz kodiert.
+com.top_logic.kafka.services.common.CommonClientConfig.enable.metrics.push = Telemetrie aktivieren
 com.top_logic.kafka.services.common.CommonClientConfig.all-properties = Alle Eigenschaften
 com.top_logic.kafka.services.common.CommonClientConfig.all-properties.tooltip = Die Konfigurations-Eigenschaften jedes Kafka Clients.
 com.top_logic.kafka.services.common.CommonClientConfig.auto.include.jmx.reporter = Auto include jmx reporter
