--- a/com.top_logic.kafka/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.kafka/src/main/java/META-INF/messages_en.properties
@@ -81,6 +81,7 @@ com.top_logic.kafka.serialization.StringSerializer = String serializer
 com.top_logic.kafka.serialization.StringSerializer.Config.encoding = Encoding
 com.top_logic.kafka.serialization.StringSerializer.Config.encoding.tooltip = The encoding for character contents. <p> The value is irrelevant, if binary data is transmitted. </p>
 com.top_logic.kafka.serialization.StringSerializer.tooltip = A <i>serializer</i> that creates messages by interpreting values as <i>strings</i> and encodes them with a given character set.
+com.top_logic.kafka.services.common.CommonClientConfig.enable.metrics.push = Enable Telemetry
 com.top_logic.kafka.services.common.CommonClientConfig.all-properties = All properties
 com.top_logic.kafka.services.common.CommonClientConfig.all-properties.tooltip = The Kafka <i>properties</i> to be used for <i>kafka common client</i> instantiation. A new, mutable and resizable <i>map</i>.
 com.top_logic.kafka.services.common.CommonClientConfig.auto.include.jmx.reporter = Auto include jmx reporter
