Ticket #28431: add translations

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -647,6 +647,8 @@ com.top_logic.model.search.expr.config.operations.session.LoadFromSession$Builde
 com.top_logic.model.search.expr.config.operations.session.LoadFromSession$Builder.tooltip = <i>Erbauer</i> der <i>Methode</i> zum <i>Laden aus der Sitzung</i>.
 com.top_logic.model.search.expr.config.operations.session.StoreInSession$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.session.StoreInSession$Builder.tooltip = <i>Erbauer</i> einer <i>Methode</i>, die einen <i>Speicher in der Sitzung</i> erstellt.
+com.top_logic.model.search.expr.config.operations.string.EncodeXML$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.string.EncodeXML$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>XML-Kodierungsfunktion</i>.
 com.top_logic.model.search.expr.config.operations.string.Internationalize$Builder = Bauherr
 com.top_logic.model.search.expr.config.operations.string.Internationalize$Builder.tooltip = <i>Einfacher Methodenersteller</i> zur Erstellung einer <i>Internationalisierungsfunktion</i>.
 com.top_logic.model.search.expr.config.operations.string.Join$Builder = Erbauer
