--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -647,6 +647,8 @@ com.top_logic.model.search.expr.config.operations.session.LoadFromSession$Builde
 com.top_logic.model.search.expr.config.operations.session.LoadFromSession$Builder.tooltip = <i>Method builder</i> creating <i>load from session</i>.
 com.top_logic.model.search.expr.config.operations.session.StoreInSession$Builder = Builder
 com.top_logic.model.search.expr.config.operations.session.StoreInSession$Builder.tooltip = <i>Method builder</i> creating <i>store in session</i>.
+com.top_logic.model.search.expr.config.operations.string.EncodeXML$Builder = Builder
+com.top_logic.model.search.expr.config.operations.string.EncodeXML$Builder.tooltip = <i>Simple method builder</i> creating an <i>encode XML</i> function.
 com.top_logic.model.search.expr.config.operations.string.Internationalize$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Internationalize$Builder.tooltip = <i>Simple method builder</i> creating an <i>internationalize</i> function.
 com.top_logic.model.search.expr.config.operations.string.Join$Builder = Builder
