Ticket #28411: Added possibility to ignore inherited listeners.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7091,6 +7091,8 @@ com.top_logic.model.annotate.TLUpdateMode.tooltip = <i>Annotation</i> specifying
 com.top_logic.model.annotate.TLUpdateMode.value = Value
 com.top_logic.model.annotate.TLUpdateMode.value.tooltip = How the classification is used and updated.
 com.top_logic.model.annotate.TLValueListeners = Value listeners
+com.top_logic.model.annotate.TLValueListeners.ignore-inherited = Ignore inherited
+com.top_logic.model.annotate.TLValueListeners.ignore-inherited.tooltip = Whether listeners of inherited attributes should be ignored.
 com.top_logic.model.annotate.TLValueListeners.listeners = Listeners
 com.top_logic.model.annotate.TLValueListeners.listeners.tooltip = Listeners to trigger when the <i>form field</i> for the annotated attribute changes its value.
 com.top_logic.model.annotate.TLValueListeners.tooltip = <i>Attribute annotation</i> to annotate value listeners to the field created for an attribute.
