--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7091,6 +7091,8 @@ com.top_logic.model.annotate.TLUpdateMode.tooltip = <i>Annotation</i>, die angib
 com.top_logic.model.annotate.TLUpdateMode.value = Wert
 com.top_logic.model.annotate.TLUpdateMode.value.tooltip = Wie die Klassifikation verwendet und aktualisiert wird.
 com.top_logic.model.annotate.TLValueListeners = Wertelisteners
+com.top_logic.model.annotate.TLValueListeners.ignore-inherited = Geerbte ignorieren
+com.top_logic.model.annotate.TLValueListeners.ignore-inherited.tooltip = Ob Listeners von geerbten Attributen ignoriert werden sollen.
 com.top_logic.model.annotate.TLValueListeners.listeners = Listener
 com.top_logic.model.annotate.TLValueListeners.listeners.tooltip = Listener, die ausgelöst werden, wenn das <i>Formularfeld</i> für das annotierte Attribut seinen Wert ändert.
 com.top_logic.model.annotate.TLValueListeners.tooltip = <i>Annotation des Attributs</i>, um dem für ein Attribut erstellten Feld Wertelistener hinzuzufügen.
