--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -1108,7 +1108,7 @@ com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Baumtabel
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Tabellenablageziel</i> für Baumtabellen, die vollständig über Modellabfragen konfiguriert werden können.
 com.top_logic.model.search.providers.ValueListenerByExpression = Wertelistener mit TL-Script
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation = Operation
-com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation.tooltip = TL-Script, das ausgeführt wird, wenn sich der Wert des Feldes für das annotierte Attribut ändert. <p> Die Operation erhält vier Argumente: das Objekt, den alten Feldwert, den neuen Feldwert und das annotierte Attribut. </p>
+com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation.tooltip = TL-Script, das ausgeführt wird, wenn sich der Wert des Feldes für das annotierte Attribut ändert. <p> Die Operation erhält vier Argumente: das Objekt, den neuen Feldwert, den alten Feldwert und das annotierte Attribut. </p>
 com.top_logic.model.search.providers.ValueListenerByExpression.tooltip = <i>Wertelistener</i>, der einen TL-Script-Ausdruck ausführt.
 com.top_logic.model.search.providers.ValueTransformationByExpression = TL-Skript-Transformation
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.aditional-arguments = Zusätzliche Argumente
