Ticket #28434: Break response, when no user name can be found.

--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -16,6 +16,7 @@ class.com.top_logic.service.openapi.server.authentication.I18NConstants.NO_SUCH_
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Fehlende Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Keine BasicAuth Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA__USER = Falsche Authentifizierung für Nutzer "{0}".
+class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.NO_USERNAME_IN_INTROSPECTION_RESPONSE = Kein Benutzername für das Token verfügbar.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_BODY_PARAM_UNSUPPORTED_FOR_METHOD__PARAM__METHOD = Der Anfrageparameter {0} ist bei der ausgewählten Methode {1} nicht erlaubt.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_LOCAL_GLOBAL_PARAMETER_CLASH__CLASHES = Es dürfen keine Parameter mit dem selben Namen und dem selben Auftrittsort sowohl an der API und der Operation definiert werden: {0}
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_MULTIPLE_REQUEST_BODY_PARAMETERS__PARAMETERS = Es kann nur einen Anfrageparameter an der API und der Operation geben: {0}
