--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -16,6 +16,7 @@ class.com.top_logic.service.openapi.server.authentication.I18NConstants.NO_SUCH_
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Missing authentication data.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Not a BasicAuth authentication.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA__USER = Wrong credentials for user "{0}".
+class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.NO_USERNAME_IN_INTROSPECTION_RESPONSE = No username available for token.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_BODY_PARAM_UNSUPPORTED_FOR_METHOD__PARAM__METHOD = The request parameter {0} is not allowed for the selected method {1}.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_LOCAL_GLOBAL_PARAMETER_CLASH__CLASHES = It is not allowed to define parameter with same name and location both in the API and in the operation: {0}
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_MULTIPLE_REQUEST_BODY_PARAMETERS__PARAMETERS = There can only be one request body parameter in the API and the operation: {0}
