--- a/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_de.properties
@@ -93,6 +93,8 @@ com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials = Op
 com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context = Im Benutzerkontext
 com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context.tooltip = Ob der geschützte Vorgang im Benutzerkontext ausgeführt werden muss. <p> Wenn diese Eigenschaft gesetzt ist, wird erwartet, dass das gesendete Zugriffstoken das persönliche Token einer Person ist, die einen Zugang zu der Anwendung hat. Der Vorgang wird dann so verarbeitet, als ob der Benutzer ihn nach einer Anmeldung ausgeführt hätte. </p>
 com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.tooltip = <i>Token-basierte Authentifizierung</i> zur Authentifizierung mit Client-Anmeldeinformationen oder Benutzer-Zugangs-Token.
+com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field = Benutzernamensfeld
+com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field.tooltip = Name des Feldes in der Token-Introspection-Antwort, das den Benutzer enthält. <p> Wenn kein Feld konfiguriert ist, wird das Standardfeld "username" verwendet, um den Benutzernamen zu finden. </p>
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication = Token based Authentifizierung
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.tooltip = <i>OAuth-Authentifizierung</i>, die die in der Anfrage gesendeten Sperren überprüft.
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.uri-provider = URI-Anbieter
@@ -308,6 +310,8 @@ com.top_logic.service.openapi.common.document.SecuritySchemeObject.type = Typ
 com.top_logic.service.openapi.common.document.SecuritySchemeObject.type.tooltip = Die Art des Sicherheitsschemas.
 com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-in-user-context = Im Benutzerkontext
 com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-in-user-context.tooltip = Angabe, ob Operationen, die durch dieses <i>Objekt des Sicherheitsschemas</i> geschützt sind, im Benutzerkontext ausgeführt werden müssen.
+com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-username-field = Benutzernamensfeld
+com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-username-field.tooltip = Name des Feldes in einer Token-Introspection-Antwort, das den Benutzernamen enthält. <p> Nur relevant, wenn Vorgänge im Benutzerkontext ausgeführt werden. </p>
 com.top_logic.service.openapi.common.document.SecuritySchemeType = Art des Sicherheitssystems
 com.top_logic.service.openapi.common.document.SecuritySchemeType.API_KEY = Api-Schlüssel
 com.top_logic.service.openapi.common.document.SecuritySchemeType.API_KEY.tooltip = Sicherheit mit einem API-Schlüssel (entweder als Kopfzeile, Cookie-Parameter oder Abfrageparameter).
