--- a/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_en.properties
@@ -93,6 +93,8 @@ com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials = Op
 com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context = In user context
 com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.in-user-context.tooltip = Whether the protected operation must be executed in user context. <p> If this property is set, then it is expected that the sent access token is the personal token of a person which has an account in the application. The operation is then processed as if the user has executed it after a login. </p>
 com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.tooltip = <i>Token based authentication</i> to authenticate by using client credentials or users access token.
+com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field = Username field
+com.top_logic.service.openapi.common.authentication.oauth.ServerCredentials.username-field.tooltip = Name of the field in the token introspection response which contains the user. <p> When no field is configured the default field "username" is used to find the user name. </p>
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication = Token based authentication
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.tooltip = <i>OAuth authentication</i> that checks the tokens that are sent in the request.
 com.top_logic.service.openapi.common.authentication.oauth.TokenBasedAuthentication.uri-provider = URI provider
@@ -308,6 +310,8 @@ com.top_logic.service.openapi.common.document.SecuritySchemeObject.type = Type
 com.top_logic.service.openapi.common.document.SecuritySchemeObject.type.tooltip = The type of the security scheme.
 com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-in-user-context = In user context
 com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-in-user-context.tooltip = Whether operations protected by this <i>security scheme object</i> must be executed in user context.
+com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-username-field = Username field
+com.top_logic.service.openapi.common.document.SecuritySchemeObject.x-tl-username-field.tooltip = Name of the field in a token introspection response, that holds the user name. <p> Only relevant when operations are executed in user context. </p>
 com.top_logic.service.openapi.common.document.SecuritySchemeType = Security scheme type
 com.top_logic.service.openapi.common.document.SecuritySchemeType.API_KEY = Api key
 com.top_logic.service.openapi.common.document.SecuritySchemeType.API_KEY.tooltip = Security using an API key (either as a header, a cookie parameter or as a query parameter).
