--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -654,12 +654,16 @@ com.top_logic.model.search.expr.config.operations.session.StoreInSession$Builder
 com.top_logic.model.search.expr.config.operations.session.StoreInSession$Builder.tooltip = <i>Method builder</i> creating <i>store in session</i>.
 com.top_logic.model.search.expr.config.operations.string.EncodeXML$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.EncodeXML$Builder.tooltip = <i>Simple method builder</i> creating an <i>encode XML</i> function.
+com.top_logic.model.search.expr.config.operations.string.GenerateSequenceId$Builder = Builder
+com.top_logic.model.search.expr.config.operations.string.GenerateSequenceId$Builder.tooltip = <i>Simple method builder</i> creating an <i>generate sequence ID</i> function.
 com.top_logic.model.search.expr.config.operations.string.Internationalize$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Internationalize$Builder.tooltip = <i>Simple method builder</i> creating an <i>internationalize</i> function.
 com.top_logic.model.search.expr.config.operations.string.Join$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Join$Builder.tooltip = <i>Method builder</i> creating <i>join</i>.
 com.top_logic.model.search.expr.config.operations.string.Localize$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Localize$Builder.tooltip = <i>Simple method builder</i> creating an <i>localize</i> function.
+com.top_logic.model.search.expr.config.operations.string.ResetSequenceId$Builder = Builder
+com.top_logic.model.search.expr.config.operations.string.ResetSequenceId$Builder.tooltip = <i>Simple method builder</i> creating an <i>reset sequence ID</i> function.
 com.top_logic.model.search.expr.config.operations.string.Split$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Split$Builder.tooltip = <i>Method builder</i> creating <i>split</i>.
 com.top_logic.model.search.expr.config.operations.string.SubString$Builder = Builder
