Ticket #28421: update Doc and I18Ns and comment mistake

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -657,8 +657,8 @@ com.top_logic.model.search.expr.config.operations.string.Join$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.string.Join$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Verbindungen</i>.
 com.top_logic.model.search.expr.config.operations.string.Localize$Builder = Bauherr
 com.top_logic.model.search.expr.config.operations.string.Localize$Builder.tooltip = <i>Einfacher Methodenersteller</i> zur Erstellung einer <i>Lokalisierungsfunktion</i>.
-com.top_logic.model.search.expr.config.operations.string.ResetSequenceId$Builder = Erbauer
-com.top_logic.model.search.expr.config.operations.string.ResetSequenceId$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Reset-Sequenz-ID-Funktion</i>.
+com.top_logic.model.search.expr.config.operations.string.ResetSequence$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.string.ResetSequence$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur Erstellung einer <i>Reset-Sequenzfunktion</i>.
 com.top_logic.model.search.expr.config.operations.string.Split$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.string.Split$Builder.tooltip = <i>Erbauer</i> der <i>Methode</i> erstellt <i>Split</i>.
 com.top_logic.model.search.expr.config.operations.string.SubString$Builder = Ersteller
