--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -661,8 +661,8 @@ com.top_logic.model.search.expr.config.operations.string.Join$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Join$Builder.tooltip = <i>Method builder</i> creating <i>join</i>.
 com.top_logic.model.search.expr.config.operations.string.Localize$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Localize$Builder.tooltip = <i>Simple method builder</i> creating an <i>localize</i> function.
-com.top_logic.model.search.expr.config.operations.string.ResetSequenceId$Builder = Builder
-com.top_logic.model.search.expr.config.operations.string.ResetSequenceId$Builder.tooltip = <i>Simple method builder</i> creating an <i>reset sequence ID</i> function.
+com.top_logic.model.search.expr.config.operations.string.ResetSequence$Builder = Builder
+com.top_logic.model.search.expr.config.operations.string.ResetSequence$Builder.tooltip = <i>Simple method builder</i> creating an <i>reset sequence</i> function.
 com.top_logic.model.search.expr.config.operations.string.Split$Builder = Builder
 com.top_logic.model.search.expr.config.operations.string.Split$Builder.tooltip = <i>Method builder</i> creating <i>split</i>.
 com.top_logic.model.search.expr.config.operations.string.SubString$Builder = Builder
