Ticket #28439: Made form table height configurable (enlarged default).

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2337,6 +2337,7 @@ com.top_logic.layout.basic.FragmentControlProvider.Config.fragmentProvider.toolt
 com.top_logic.layout.basic.FragmentControlProvider.tooltip = Ein Adapter, der ein <i>Control-Provider</i> ist und einen <i>HTML-Fragment-Provider</i> hat.
 com.top_logic.layout.basic.GenericCommandModelNaming$GenericCommandModelName = Generischer Befehlsmodellname
 com.top_logic.layout.basic.GenericCommandModelNaming$GenericCommandModelName.tooltip = <i>Generischer Modellname</i> für <i>generische Befehlsmodellbenennung</i>
+com.top_logic.layout.basic.Icons.FORM_TABLE_HEIGHT = Standardhöhe in Pixeln für Tabellen, die in Formularen angezeigt werden. <p> Wird eine Tabelle größer als dieser Schwellenwert, erhält die Tabelle eine vertikale Bildlaufleiste. In diesem Fall kann der Benutzer die Tabellengröße individuell anpassen, indem er den unteren Rand auf eine andere Größe zieht, um eine benutzerdefinierte Grenze für diese Tabelle festzulegen. </p> <p> Wenn dieser Wert auf Null gesetzt wird, wird das Scrollen der Tabelle in Formularen verhindert und die Tabelle zeigt immer alle Zeilen an. </p>
 com.top_logic.layout.basic.Icons.RENDERING_ERROR_NORMAL = Bild, das einen Rendering-Fehler anzeigt.
 com.top_logic.layout.basic.Icons.VERTICAL_SIZABLE_CONTROL_TEMPLATE = Vorlage zur Definition eines in der Größe anpassbaren Steuerelements.
 com.top_logic.layout.basic.LabelFilter = Etiketten-Filter
