--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -2337,6 +2337,7 @@ com.top_logic.layout.basic.FragmentControlProvider.Config.fragmentProvider.toolt
 com.top_logic.layout.basic.FragmentControlProvider.tooltip = An adapter that is a <i>control provider</i> and has an <i>HTML fragment provider</i>.
 com.top_logic.layout.basic.GenericCommandModelNaming$GenericCommandModelName = Generic command model name
 com.top_logic.layout.basic.GenericCommandModelNaming$GenericCommandModelName.tooltip = <i>Generic model name</i> for <i>generic command model naming</i>.
+com.top_logic.layout.basic.Icons.FORM_TABLE_HEIGHT = Default height in pixels of tables displayed in forms. <p> If a table gets larger than this threshold, the table gets a vertical scroll bar. In that case, the user can personalize the table size by dragging the bottom border to any other size to set a custom limit for that table. </p> <p> When setting this value to zero, table scrolling in forms is prevented and the table always show all rows. </p>
 com.top_logic.layout.basic.Icons.RENDERING_ERROR_NORMAL = Image that indicates a rendering error.
 com.top_logic.layout.basic.Icons.VERTICAL_SIZABLE_CONTROL_TEMPLATE = Template defining a user size adjustable control.
 com.top_logic.layout.basic.LabelFilter = Label filter
