Ticket #28426: Added resolver annotation.
* Types can now be annotated with InstanceResolver implementations for
referencing objects not part of the export.
* Values in compositions are now always exported with the owning object,
if not explicitly excluded.
* Primitive attributes with collection values are now exported
correctly.
* Share the resolver lookup between exporter and importer.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
@@ -974,6 +974,7 @@ layout.element.grid.Grid.createAttributedGrid.tooltip = Legt ein neues Objekt an
 layout.element.grid.Grid.title = 
 layouts.element.create.genericCreate.createType = Typ
 layouts.element.create.genericCreate.title = Anlageformular
+layouts.element.meta.InstanceBrowser.exportInstances = Selektierte Objekte exportieren
 layouts.element.meta.InstanceBrowser.exportName = objekte
 layouts.element.meta.InstanceBrowser.newInstance = Neue Instanz anlegen.
 layouts.element.meta.InstanceBrowser.table.title = Instanzen
