--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
@@ -974,6 +974,7 @@ layout.element.grid.Grid.createAttributedGrid.tooltip = Create a new object.
 layout.element.grid.Grid.title = 
 layouts.element.create.genericCreate.createType = Type
 layouts.element.create.genericCreate.title = Create form
+layouts.element.meta.InstanceBrowser.exportInstances = Export selected objects
 layouts.element.meta.InstanceBrowser.exportName = objects
 layouts.element.meta.InstanceBrowser.newInstance = Create new instance.
 layouts.element.meta.InstanceBrowser.table.title = Instances
