Ticket #28459: implement InApp Configuration for additional Headers

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -592,11 +592,7 @@ com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip 
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseCSV$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von CSV</i>.
 com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder = Erbauer
-<<<<<<< PREVIEW/28310_custom_workflow_view_2
-com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder.tooltip = <i>Erbauer von Methoden</i> zum <i>Parsen von Excel</i>.
-=======
 com.top_logic.model.search.expr.config.operations.binary.ParseExcel$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von Excel-Dateien</i>.
->>>>>>> d519614 Ticket #28173: Added missing resource keys.
 com.top_logic.model.search.expr.config.operations.binary.ParseJson$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ParseJson$Builder.tooltip = <i>Erbauer einer Methode</i> zum <i>Parsen von JSON</i>.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt$Builder = Erbauer
@@ -809,6 +805,10 @@ com.top_logic.model.search.providers.CellClassProviderByExpression = CSS-Klassen
 com.top_logic.model.search.providers.CellClassProviderByExpression.Config.css-classes = CSS-Klassen
 com.top_logic.model.search.providers.CellClassProviderByExpression.Config.css-classes.tooltip = Funktion zur Berechnung der CSS-Klasse für eine bestimmte Zelle. <p> Die Funktion erwartet die folgenden drei Argumente: </p> <dl> <dt><code>value</code></dt> <dd>Der Wert der Zelle, die eine CSS-Klasse erhalten soll. Wenn die Spalte ein Attribut eines Objekts darstellt, dann ist der Wert der Wert dieses Attributs für das Zeilenobjekt.</dd> </dl> <dl> <dt><code>row</code></dt> <dd>Das Zeilenobjekt der aktuellen Tabellenzeile. Wenn die Spalte ein Attribut eines Objekts darstellt, dann ist die Zeile das Objekt, von dem Attribute in der aktuellen Tabellenzeile angezeigt werden.</dd> </dl> <dl> <dt><code>model</code></dt> <dd>Das Modell der zugrunde liegenden Komponente.</dd> </dl> <p> Von der Funktion wird erwartet, dass sie eine Zeichenkette zurückgibt, die die CSS-Klasse darstellt, die für die aktuelle Zelle festgelegt werden soll. Mehrere CSS-Klassen können durch Leerzeichen getrennt werden. Wenn die Funktion den Wert <code>null</code> zurückgibt, werden der aktuellen Zelle keine CSS-Klassen hinzugefügt. </p> <p> Um die CSS-Klasse<code>tl-warning</code>" zu Zellen mit Werten größer als <code>99</code> hinzuzufügen, können Sie den folgenden Ausdruck verwenden: </p> <pre> <code>value -> $value &gt; 99 ? "tl-warning" : null</code> </pre> <p> Es gibt eine Reihe von vordefinierten CSS-Klassen für die Hervorhebung: </p> <ul> <li><code>tl-info</code></li> <li><code>tl-success</code></li> <li><code>tl-warning</code></li> <li><code>tl-danger</code></li> <li><code>tl-debug</code></li> <li><code>tl-accent-1</code></li> <li><code>tl-accent-2</code></li> <li><code>tl-accent-3</code></li> </ul> <p> Alle diese Klassen können mit der Klasse <code>tl-lighter</code> kombiniert werden, um die Hervorhebung weniger auffällig zu machen. </p>
 com.top_logic.model.search.providers.CellClassProviderByExpression.tooltip = Berechnung von dynamischen CSS-Klassen für Tabellenzellen in einer TL-Script-Funktion.
+com.top_logic.model.search.providers.ColumnAdditionalHeaders = Zusätzliche Spaltenüberschriften
+com.top_logic.model.search.providers.ColumnAdditionalHeaders.Config.additionalHeaders = Zusätzliche Überschriften
+com.top_logic.model.search.providers.ColumnAdditionalHeaders.Config.additionalHeaders.tooltip = Liste der Berechnungen von HTML-Fragmenten für zusätzliche Spaltenüberschriften.
+com.top_logic.model.search.providers.ColumnAdditionalHeaders.tooltip = Fügt zusätzliche Überschriften zu einer Spaltenkonfiguration hinzu, wobei die vorhandenen Überschriften erhalten bleiben.
 com.top_logic.model.search.providers.CommandHandlerByExpression = Befehlshandler über Ausdruck
 com.top_logic.model.search.providers.CommandHandlerByExpression.Config.close-dialog = Dialog schließen
 com.top_logic.model.search.providers.CommandHandlerByExpression.Config.close-dialog.tooltip = Ob ein aktiver Dialog geschlossen werden soll, wird in diesem <i>Befehlshandler</i> ausgeführt. <p> Dieses Flag hat keine Bedeutung, wenn der Befehl nicht innerhalb eines Dialogs ausgeführt wird. </p>
